More strict on account usage in imports
Signed-off-by: Derek Collison <derek@nats.io>

--- a/srv.conf
+++ b/srv.conf
@@ -7,9 +7,21 @@ accounts: {
     exports = [
       # To send requests.
       # The second token is the customer ID.
-      {stream: "req.*", accounts: [cust1, cust2]}
+      {
+        stream: "req.*",
+	# This enforces they can only import their account.
+	account_token_position: 2,
+	# Can ignore, just locks down in server config mode.
+	accounts: [cust1, cust2],
+      }
       # To receive the responses.
-      {service: "$R.>", accounts: [cust1, cust2]}
+      {
+        service: "$R.>",
+	# This allows quicker cleanup since we don't respond.
+	response_time: "10ms",
+	# Can ignore, just locks down in server config mode.
+	accounts: [cust1, cust2],
+      }
     ]
   }
 
