Added broadcast example as well
Signed-off-by: Derek Collison <derek@nats.io>

--- a/srv.conf
+++ b/srv.conf
@@ -6,22 +6,29 @@ accounts: {
     users = [ {user: root, password: s3cr3t!} ]
     exports = [
       # To send requests.
-      # The second token is the customer ID.
+      # The second token is the account.
       {
         stream: "req.*",
 	# This enforces they can only import their account.
 	account_token_position: 2,
 	# Can ignore, just locks down in server config mode.
 	accounts: [cust1, cust2],
-      }
+      },
       # To receive the responses.
       {
         service: "$R.>",
 	# This allows quicker cleanup since we don't respond.
-	response_time: "10ms",
+	response_time: "1s",
 	# Can ignore, just locks down in server config mode.
 	accounts: [cust1, cust2],
       }
+
+      # To send broadcast requests.
+      {
+        stream: "broadcast",
+	# Can ignore, just locks down in server config mode.
+	accounts: [cust1, cust2],
+      },
     ]
   }
 
@@ -29,6 +36,7 @@ accounts: {
     users = [ {user: u1, password: p1} ]
     imports = [
       {stream: {account: "root", subject:"req.cust1"}, to: "cosmonic.requests"}
+      {stream: {account: "root", subject:"broadcast"}, to: "cosmonic.all"}
       {service: {account: "root", subject:"$R.>"}}
     ]
   }
@@ -37,6 +45,7 @@ accounts: {
     users = [ {user: u2, password: p2} ]
     imports = [
       {stream: {account: "root", subject:"req.cust2"}, to: "cosmonic.requests"}
+      {stream: {account: "root", subject:"broadcast"}, to: "cosmonic.all"}
       {service: {account: "root", subject:"$R.>"}}
     ]
   }
